// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Greeting snapshot checks Renders correctly with username 1`] = `
<div
  className="makeStyles-greetingContainer-1"
  data-test="container"
>
  <h2
    className="MuiTypography-root makeStyles-greetingBody-2 MuiTypography-h2"
    data-test="greeting"
  >
    Good 
    morning
    <span
      data-test="username"
    >
       
      user
      !
    </span>
  </h2>
</div>
`;

exports[`Greeting snapshot checks Renders correctly without username 1`] = `
<div
  className="makeStyles-greetingContainer-1"
  data-test="container"
>
  <h2
    className="MuiTypography-root makeStyles-greetingBody-2 MuiTypography-h2"
    data-test="greeting"
  >
    Good 
    morning
    <span
      data-test="username"
    >
       
      !
    </span>
  </h2>
</div>
`;
